Further EIT changes for experiment design. First pass at a method on the state which will optimise the design when called.

--- a/notebooks/EIT.ipynb
+++ b/notebooks/EIT.ipynb
@@ -20,11 +20,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 29,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The mcmc extension is already loaded. To reload it, use:\n",
+      "  %reload_ext mcmc\n"
+     ]
+    }
+   ],
    "source": [
     "%matplotlib inline\n",
     "import matplotlib.pyplot as plt\n",
@@ -42,6 +51,7 @@
     "from scipy import stats\n",
     "import tables\n",
     "import os\n",
+    "import bayesian_design as bd\n",
     "#import gpanim\n",
     "#matplotlib.rc('text', usetex=True)\n",
     "#matplotlib.rcParams['text.latex.unicode'] = True"
@@ -127,6 +137,32 @@
     "    this_currents = current_file[32*i:32*(i+1)]\n",
     "    this_voltages = np.random.normal(voltage_file[32*i+1:32*(i+1)+1], noise_variance)\n",
     "    experiments.append((this_currents.reshape((32,1)), this_voltages.reshape((32,1))))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def euclid_to_polar(points):\n",
+    "    r = points[:,0]\n",
+    "    theta = points[:,1]\n",
+    "    x = r*cos(theta)\n",
+    "    y = r*sin(theta)\n",
+    "    new_points = np.c_[x, y]\n",
+    "    return new_points\n",
+    "\n",
+    "def polar_to_euclid(points):\n",
+    "    cur_x = points[:,0]\n",
+    "    cur_y = points[:,1]\n",
+    "    r = np.sqrt(cur_x**2 + cur_y**2)\n",
+    "    theta = np.arctan(y / x)\n",
+    "    theta[x == 0] = 0 # bit hacky\n",
+    "    new_points = np.c_[r, theta]\n",
+    "    return new_points"
    ]
   },
   {
@@ -221,7 +257,6 @@
    },
    "outputs": [],
    "source": [
-    "obs = [(interior, None), (bdy, None)]\n",
     "interior_obs = np.zeros((interior.shape[0], 1))"
    ]
   },
@@ -552,7 +587,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 32,
    "metadata": {
     "collapsed": false
    },
@@ -584,25 +619,45 @@
     "    def potential(self, proposal):\n",
     "        # potential is the negative log-likelihood\n",
     "        return -self.log_likelihood(proposal)\n",
-    "\n",
-    "    def log_likelihood(self, proposal):\n",
-    "        # OKAY\n",
-    "        # Now I need to localise kappa to whatever the current design is.\n",
-    "        # I need to have observations of kappa and its gradient wrt x and y, based on observations of these quantities.\n",
-    "        # I could just do GP regression based on those quantities then. I'll be missing information but it should\n",
-    "        # be good enough\n",
+    "    \n",
+    "    def refresh_design(self):\n",
+    "        def get_cov_polar(points):\n",
+    "            euclid_points = polar_to_euclid(points)\n",
+    "            _, cov = self.get_posterior(euclid_points)\n",
+    "            return cov\n",
     "        \n",
+    "        cur_design_polar = euclid_to_polar(self.design)\n",
+    "        \n",
+    "        get_optimizer_bounds = lambda p: [(0., 1.), (-np.pi, np.pi)]\n",
+    "        \n",
+    "        # todo: need to couch the problem in polar coordinates so that we can just work in a square instead of a\n",
+    "        # circle. In a circle the optimizer will struggle.\n",
+    "        optimizer = bd.optimizers.gpyopt_optimizer(get_optimizer_bounds)\n",
+    "        \n",
+    "        loss = bd.a_optimality(get_cov_polar)\n",
+    "        new_design = bd.ace(cur_design_polar, 1, 10, loss, optimizer, 1)\n",
+    "        \n",
+    "        self.design = polar_to_euclid(new_design)\n",
+    "        \n",
+    "    def get_posterior(self, interior_points):\n",
     "        sim_kappa, sim_kappa_x, sim_kappa_y = vec_to_kappas(proposal)\n",
-    "        \n",
+    "\n",
     "        kappa_int = self.interior_dot_mat.dot(sim_kappa).ravel()\n",
     "        kappa_bdy = self.boundary_dot_mat.dot(sim_kappa).ravel()\n",
     "        kappa_x = self.interior_dot_mat.dot(sim_kappa_x).ravel()\n",
     "        kappa_y = self.interior_dot_mat.dot(sim_kappa_y).ravel()\n",
-    "        \n",
+    "\n",
     "        oc = TransformedOpCache(arg_caching, kappa_int, kappa_bdy, kappa_x, kappa_y, 0)\n",
+    "        \n",
+    "        # always observing the same boundary points\n",
+    "        obs = [(interior_points, None), (bdy, None)]\n",
     "\n",
     "        posterior = bpdes.collocate(ops, ops_bar, None, None, obs, oc, fun_args=[self.length_scale])\n",
     "        mu_mult, cov = posterior.no_obs_posterior(true_x)\n",
+    "        return mu_mult, cov\n",
+    "    \n",
+    "    def log_likelihood(self, proposal):\n",
+    "        mu_mult, cov = self.get_posterior(self.design)\n",
     "        cov_with_error = cov + noise_variance**2*np.eye(cov.shape[0])\n",
     "\n",
     "        if bayesian_approach:\n",
@@ -624,6 +679,13 @@
     "        except:\n",
     "            return -np.inf\n",
     "        return ret"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# MCMC"
    ]
   },
   {
